# python-pydantic-argparse

./: README.md  pyproject.toml
src/pydantic_argparse/: __main__.py
