[tool.poetry]
name = "pydantic-argparse"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
pydantic-argparse = "pydantic_argparse.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
